--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,5 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  p Welcome to #{title} a GIT project that leverages Azure DevOps to build a Docker image publish it to Docker Hub and deplyo it in AKS. 
+  
