chaning index.jade

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content
-  h1= title
+  h1= title  
   p Welcome to #{title} a GIT project that leverages Azure DevOps to build a Docker image publish it to Docker Hub and deplyo it in AKS. 
+  p We did it!
   
+
